Complete README for DAB yahcli functions
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>